[package]
name = "redlock-rs"
version = "0.1.0"
authors = ["jace-ys <jaceys.tan@gmail.com>"]
edition = "2018"

[lib]
name = "redlock"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "examples/example.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
redis = "0.20.0"
thiserror = "1.0"
