[package]
name = "redsync"
version = "0.1.2"
authors = ["jace-ys <jaceys.tan@gmail.com>"]
edition = "2018"
description = "A Rust implementation of Redlock for distributed locks with Redis"
readme = "README.md"
homepage = "https://github.com/jace-ys/redsync"
repository = "https://github.com/jace-ys/redsync"
license = "MIT"
keywords = ["redsync", "redlock", "redis", "distributed-locks", "distributed-systems"]
categories = ["concurrency", "algorithms"]

[[bin]]
name = "example"
path = "examples/example.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
redis = "0.20.0"
thiserror = "1.0"
